# cardg

./: CMakeLists.txt  README.md  main.cpp  scratch.cpp
include/: card.h  deck.h  hand.h
src/: card.cpp  deck.cpp  hand.cpp
